sumo/tests/sumo/output/e2/errors/id_empty/errors.sumo
Error: Missing id of a 'e2-detector'-object.
Quitting (on error).
